Closed Bug 1099493 Opened 10 years ago Closed 10 years ago

fix build failures in non-ion builds

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: stevensn, Assigned: stevensn)

References

Details

Attachments

(1 file, 1 obsolete file)

Two build failures when building on a non-ion platform

js/src/jit/BaselineCompiler.cpp:3507:10: error: ?class js::jit::MacroAssembler? has no member named ?callAndPushReturnAddress?


js/src/asmjs/AsmJSSignalHandlers.cpp:324:55: error: ‘PC_sig’ was not declared in this scope
 9:51.02      return reinterpret_cast<uint8_t**>(&PC_sig(context));
Attached patch non_ion_fixes.diff (obsolete) — Splinter Review
In bug 1046452 I proposed trying to add PC_sig definitions for other platforms.  If you don't like the #ifdef JS_CODEGEN_NONE we could try to add those.
Attachment #8523373 - Flags: review?(luke)
Attachment #8523373 - Flags: review?(luke) → review+
Bug 1099202 has already fixed the MacroAssembler-none.h part of this patch
Attachment #8523373 - Attachment is obsolete: true
Keywords: checkin-needed
Attachment #8523467 - Attachment is patch: true
https://hg.mozilla.org/mozilla-central/rev/67c2b419d836
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: