Bug 1099493 - Fix non-ion build failures. r=luke